Initialize/yaml/upstream/upstream-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upstream
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: upstream
