Initialize/yaml/upstream/upstream-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: upstream
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /test
            pathType: Prefix
            backend:
              serviceName: upstream
              servicePort: 80
